--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	compile group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
+	compile group: 'com.google.guava', name: 'guava', version: '28.1-jre'
 
 }
 
